ExtractFeatures() can now read steps with multiple lines

--- a/STEPFILE-Project/STEPFILE-Project.vcxproj
+++ b/STEPFILE-Project/STEPFILE-Project.vcxproj
@@ -139,10 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FeatureFinder.cpp" />
     <ClCompile Include="STEP.cpp" />
     <ClCompile Include="STEPFILE-Project.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FeatureFinder.h" />
     <ClInclude Include="STEP.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
